summative.moria.Moria.scala.error
Compilation error:
Moria:26: error: ';' expected but 'return' found.
    setPos(getX()+1,getY()+1) return
                              ^